src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIGNAS
    ALIGNOF
    ANDEQUALS
    ARROW
    ASM
    AUTO
    BITAND
    BITNOT
    BITOR
    BITSHIFTLEFT
    BITSHIFTRIGHT
    BITXOR
    BOOL
    BREAK
    CASE
    CHARLITERAL
    COLON
    CONDITIONAL
    CONST
    CONTINUE
    DECREMENT
    DEFAULT
    DIVIDEEQUALS
    DO
    DOT
    ENUM
    EXTERN
    FALSE
    GOTO
    INCREMENT
    INLINE
    LEFTSHIFTEQUALS
    LONG
    LSQUARE
    MINUSEQUALS
    MODULUSEQUALS
    NULLPTR
    OREQUALS
    PLUSEQUALS
    PREPROCESSOR
    REGISTER
    RESTRICT
    RIGHTSHIFTEQUALS
    RSQUARE
    SHORT
    SIGNED
    SIZEOF
    STATIC
    STRINGLITERAL
    STRUCT
    SWITCH
    TIMESEQUALS
    TRUE
    TYPEDEF
    TYPEOF
    UNION
    UNSIGNED
    VOLATILE
    XOREQUALS

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declaration
Rule 2     program -> program external_declaration
Rule 3     external_declaration -> function
Rule 4     external_declaration -> declaration SEMICOLON
Rule 5     declaration -> type IDENTIFIER
Rule 6     declaration -> type IDENTIFIER EQUALS expression
Rule 7     function -> type IDENTIFIER LPAREN parameter_list RPAREN LBRACE statements RBRACE
Rule 8     parameter_list -> parameter
Rule 9     parameter_list -> parameter_list COMMA parameter
Rule 10    parameter_list -> empty
Rule 11    parameter -> type IDENTIFIER
Rule 12    type -> INT
Rule 13    type -> VOID
Rule 14    type -> CHAR
Rule 15    type -> FLOAT
Rule 16    type -> DOUBLE
Rule 17    statements -> statement
Rule 18    statements -> statements statement
Rule 19    statement -> declaration SEMICOLON
Rule 20    statement -> expression SEMICOLON
Rule 21    statement -> if_statement
Rule 22    statement -> while_statement
Rule 23    statement -> for_statement
Rule 24    statement -> return_statement
Rule 25    statement -> block
Rule 26    block -> LBRACE statements RBRACE
Rule 27    if_statement -> IF LPAREN expression RPAREN statement
Rule 28    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 29    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 30    for_statement -> FOR LPAREN opt_expression SEMICOLON opt_expression SEMICOLON opt_expression RPAREN statement
Rule 31    opt_expression -> expression
Rule 32    opt_expression -> empty
Rule 33    return_statement -> RETURN expression SEMICOLON
Rule 34    return_statement -> RETURN SEMICOLON
Rule 35    expression -> expression PLUS expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression TIMES expression
Rule 38    expression -> expression DIVIDE expression
Rule 39    expression -> expression MODULUS expression
Rule 40    expression -> expression ISGREATERTHAN expression
Rule 41    expression -> expression ISLESSTHAN expression
Rule 42    expression -> expression ISGREATERTHANEQUAL expression
Rule 43    expression -> expression ISLESSTHANEQUAL expression
Rule 44    expression -> expression ISEQUALS expression
Rule 45    expression -> expression ISNOTEQUALS expression
Rule 46    expression -> expression AND expression
Rule 47    expression -> expression OR expression
Rule 48    expression -> NOT expression
Rule 49    expression -> MINUS expression
Rule 50    expression -> LPAREN expression RPAREN
Rule 51    expression -> NUMBER
Rule 52    expression -> IDENTIFIER
Rule 53    expression -> IDENTIFIER EQUALS expression
Rule 54    expression -> IDENTIFIER LPAREN argument_list RPAREN
Rule 55    argument_list -> expression
Rule 56    argument_list -> argument_list COMMA expression
Rule 57    argument_list -> empty
Rule 58    empty -> <empty>

Terminals, with rules where they appear

ALIGNAS              : 
ALIGNOF              : 
AND                  : 46
ANDEQUALS            : 
ARROW                : 
ASM                  : 
AUTO                 : 
BITAND               : 
BITNOT               : 
BITOR                : 
BITSHIFTLEFT         : 
BITSHIFTRIGHT        : 
BITXOR               : 
BOOL                 : 
BREAK                : 
CASE                 : 
CHAR                 : 14
CHARLITERAL          : 
COLON                : 
COMMA                : 9 56
CONDITIONAL          : 
CONST                : 
CONTINUE             : 
DECREMENT            : 
DEFAULT              : 
DIVIDE               : 38
DIVIDEEQUALS         : 
DO                   : 
DOT                  : 
DOUBLE               : 16
ELSE                 : 28
ENUM                 : 
EQUALS               : 6 53
EXTERN               : 
FALSE                : 
FLOAT                : 15
FOR                  : 30
GOTO                 : 
IDENTIFIER           : 5 6 7 11 52 53 54
IF                   : 27 28
INCREMENT            : 
INLINE               : 
INT                  : 12
ISEQUALS             : 44
ISGREATERTHAN        : 40
ISGREATERTHANEQUAL   : 42
ISLESSTHAN           : 41
ISLESSTHANEQUAL      : 43
ISNOTEQUALS          : 45
LBRACE               : 7 26
LEFTSHIFTEQUALS      : 
LONG                 : 
LPAREN               : 7 27 28 29 30 50 54
LSQUARE              : 
MINUS                : 36 49
MINUSEQUALS          : 
MODULUS              : 39
MODULUSEQUALS        : 
NOT                  : 48
NULLPTR              : 
NUMBER               : 51
OR                   : 47
OREQUALS             : 
PLUS                 : 35
PLUSEQUALS           : 
PREPROCESSOR         : 
RBRACE               : 7 26
REGISTER             : 
RESTRICT             : 
RETURN               : 33 34
RIGHTSHIFTEQUALS     : 
RPAREN               : 7 27 28 29 30 50 54
RSQUARE              : 
SEMICOLON            : 4 19 20 30 30 33 34
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 
STRINGLITERAL        : 
STRUCT               : 
SWITCH               : 
TIMES                : 37
TIMESEQUALS          : 
TRUE                 : 
TYPEDEF              : 
TYPEOF               : 
UNION                : 
UNSIGNED             : 
VOID                 : 13
VOLATILE             : 
WHILE                : 29
XOREQUALS            : 
error                : 

Nonterminals, with rules where they appear

argument_list        : 54 56
block                : 25
declaration          : 4 19
empty                : 10 32 57
expression           : 6 20 27 28 29 31 33 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 50 53 55 56
external_declaration : 1 2
for_statement        : 23
function             : 3
if_statement         : 21
opt_expression       : 30 30 30
parameter            : 8 9
parameter_list       : 7 9
program              : 2 0
return_statement     : 24
statement            : 17 18 27 28 28 29 30
statements           : 7 18 26
type                 : 5 6 7 11
while_statement      : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declaration
    (2) program -> . program external_declaration
    (3) external_declaration -> . function
    (4) external_declaration -> . declaration SEMICOLON
    (7) function -> . type IDENTIFIER LPAREN parameter_list RPAREN LBRACE statements RBRACE
    (5) declaration -> . type IDENTIFIER
    (6) declaration -> . type IDENTIFIER EQUALS expression
    (12) type -> . INT
    (13) type -> . VOID
    (14) type -> . CHAR
    (15) type -> . FLOAT
    (16) type -> . DOUBLE

    INT             shift and go to state 6
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    FLOAT           shift and go to state 9
    DOUBLE          shift and go to state 10

    program                        shift and go to state 1
    external_declaration           shift and go to state 2
    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5

state 1

    (0) S' -> program .
    (2) program -> program . external_declaration
    (3) external_declaration -> . function
    (4) external_declaration -> . declaration SEMICOLON
    (7) function -> . type IDENTIFIER LPAREN parameter_list RPAREN LBRACE statements RBRACE
    (5) declaration -> . type IDENTIFIER
    (6) declaration -> . type IDENTIFIER EQUALS expression
    (12) type -> . INT
    (13) type -> . VOID
    (14) type -> . CHAR
    (15) type -> . FLOAT
    (16) type -> . DOUBLE

    INT             shift and go to state 6
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    FLOAT           shift and go to state 9
    DOUBLE          shift and go to state 10

    external_declaration           shift and go to state 11
    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5

state 2

    (1) program -> external_declaration .

    INT             reduce using rule 1 (program -> external_declaration .)
    VOID            reduce using rule 1 (program -> external_declaration .)
    CHAR            reduce using rule 1 (program -> external_declaration .)
    FLOAT           reduce using rule 1 (program -> external_declaration .)
    DOUBLE          reduce using rule 1 (program -> external_declaration .)
    $end            reduce using rule 1 (program -> external_declaration .)


state 3

    (3) external_declaration -> function .

    INT             reduce using rule 3 (external_declaration -> function .)
    VOID            reduce using rule 3 (external_declaration -> function .)
    CHAR            reduce using rule 3 (external_declaration -> function .)
    FLOAT           reduce using rule 3 (external_declaration -> function .)
    DOUBLE          reduce using rule 3 (external_declaration -> function .)
    $end            reduce using rule 3 (external_declaration -> function .)


state 4

    (4) external_declaration -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 12


state 5

    (7) function -> type . IDENTIFIER LPAREN parameter_list RPAREN LBRACE statements RBRACE
    (5) declaration -> type . IDENTIFIER
    (6) declaration -> type . IDENTIFIER EQUALS expression

    IDENTIFIER      shift and go to state 13


state 6

    (12) type -> INT .

    IDENTIFIER      reduce using rule 12 (type -> INT .)


state 7

    (13) type -> VOID .

    IDENTIFIER      reduce using rule 13 (type -> VOID .)


state 8

    (14) type -> CHAR .

    IDENTIFIER      reduce using rule 14 (type -> CHAR .)


state 9

    (15) type -> FLOAT .

    IDENTIFIER      reduce using rule 15 (type -> FLOAT .)


state 10

    (16) type -> DOUBLE .

    IDENTIFIER      reduce using rule 16 (type -> DOUBLE .)


state 11

    (2) program -> program external_declaration .

    INT             reduce using rule 2 (program -> program external_declaration .)
    VOID            reduce using rule 2 (program -> program external_declaration .)
    CHAR            reduce using rule 2 (program -> program external_declaration .)
    FLOAT           reduce using rule 2 (program -> program external_declaration .)
    DOUBLE          reduce using rule 2 (program -> program external_declaration .)
    $end            reduce using rule 2 (program -> program external_declaration .)


state 12

    (4) external_declaration -> declaration SEMICOLON .

    INT             reduce using rule 4 (external_declaration -> declaration SEMICOLON .)
    VOID            reduce using rule 4 (external_declaration -> declaration SEMICOLON .)
    CHAR            reduce using rule 4 (external_declaration -> declaration SEMICOLON .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration SEMICOLON .)
    DOUBLE          reduce using rule 4 (external_declaration -> declaration SEMICOLON .)
    $end            reduce using rule 4 (external_declaration -> declaration SEMICOLON .)


state 13

    (7) function -> type IDENTIFIER . LPAREN parameter_list RPAREN LBRACE statements RBRACE
    (5) declaration -> type IDENTIFIER .
    (6) declaration -> type IDENTIFIER . EQUALS expression

    LPAREN          shift and go to state 14
    SEMICOLON       reduce using rule 5 (declaration -> type IDENTIFIER .)
    EQUALS          shift and go to state 15


state 14

    (7) function -> type IDENTIFIER LPAREN . parameter_list RPAREN LBRACE statements RBRACE
    (8) parameter_list -> . parameter
    (9) parameter_list -> . parameter_list COMMA parameter
    (10) parameter_list -> . empty
    (11) parameter -> . type IDENTIFIER
    (58) empty -> .
    (12) type -> . INT
    (13) type -> . VOID
    (14) type -> . CHAR
    (15) type -> . FLOAT
    (16) type -> . DOUBLE

    RPAREN          reduce using rule 58 (empty -> .)
    COMMA           reduce using rule 58 (empty -> .)
    INT             shift and go to state 6
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    FLOAT           shift and go to state 9
    DOUBLE          shift and go to state 10

    type                           shift and go to state 16
    parameter_list                 shift and go to state 17
    parameter                      shift and go to state 18
    empty                          shift and go to state 19

state 15

    (6) declaration -> type IDENTIFIER EQUALS . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 21

state 16

    (11) parameter -> type . IDENTIFIER

    IDENTIFIER      shift and go to state 26


state 17

    (7) function -> type IDENTIFIER LPAREN parameter_list . RPAREN LBRACE statements RBRACE
    (9) parameter_list -> parameter_list . COMMA parameter

    RPAREN          shift and go to state 27
    COMMA           shift and go to state 28


state 18

    (8) parameter_list -> parameter .

    RPAREN          reduce using rule 8 (parameter_list -> parameter .)
    COMMA           reduce using rule 8 (parameter_list -> parameter .)


state 19

    (10) parameter_list -> empty .

    RPAREN          reduce using rule 10 (parameter_list -> empty .)
    COMMA           reduce using rule 10 (parameter_list -> empty .)


state 20

    (52) expression -> IDENTIFIER .
    (53) expression -> IDENTIFIER . EQUALS expression
    (54) expression -> IDENTIFIER . LPAREN argument_list RPAREN

    PLUS            reduce using rule 52 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 52 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 52 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 52 (expression -> IDENTIFIER .)
    MODULUS         reduce using rule 52 (expression -> IDENTIFIER .)
    ISGREATERTHAN   reduce using rule 52 (expression -> IDENTIFIER .)
    ISLESSTHAN      reduce using rule 52 (expression -> IDENTIFIER .)
    ISGREATERTHANEQUAL reduce using rule 52 (expression -> IDENTIFIER .)
    ISLESSTHANEQUAL reduce using rule 52 (expression -> IDENTIFIER .)
    ISEQUALS        reduce using rule 52 (expression -> IDENTIFIER .)
    ISNOTEQUALS     reduce using rule 52 (expression -> IDENTIFIER .)
    AND             reduce using rule 52 (expression -> IDENTIFIER .)
    OR              reduce using rule 52 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 52 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 52 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 52 (expression -> IDENTIFIER .)
    EQUALS          shift and go to state 29
    LPAREN          shift and go to state 30


state 21

    (6) declaration -> type IDENTIFIER EQUALS expression .
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression
    (39) expression -> expression . MODULUS expression
    (40) expression -> expression . ISGREATERTHAN expression
    (41) expression -> expression . ISLESSTHAN expression
    (42) expression -> expression . ISGREATERTHANEQUAL expression
    (43) expression -> expression . ISLESSTHANEQUAL expression
    (44) expression -> expression . ISEQUALS expression
    (45) expression -> expression . ISNOTEQUALS expression
    (46) expression -> expression . AND expression
    (47) expression -> expression . OR expression

    SEMICOLON       reduce using rule 6 (declaration -> type IDENTIFIER EQUALS expression .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    MODULUS         shift and go to state 35
    ISGREATERTHAN   shift and go to state 36
    ISLESSTHAN      shift and go to state 37
    ISGREATERTHANEQUAL shift and go to state 38
    ISLESSTHANEQUAL shift and go to state 39
    ISEQUALS        shift and go to state 40
    ISNOTEQUALS     shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43


state 22

    (49) expression -> MINUS . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 44

state 23

    (48) expression -> NOT . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 45

state 24

    (50) expression -> LPAREN . expression RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 46

state 25

    (51) expression -> NUMBER .

    PLUS            reduce using rule 51 (expression -> NUMBER .)
    MINUS           reduce using rule 51 (expression -> NUMBER .)
    TIMES           reduce using rule 51 (expression -> NUMBER .)
    DIVIDE          reduce using rule 51 (expression -> NUMBER .)
    MODULUS         reduce using rule 51 (expression -> NUMBER .)
    ISGREATERTHAN   reduce using rule 51 (expression -> NUMBER .)
    ISLESSTHAN      reduce using rule 51 (expression -> NUMBER .)
    ISGREATERTHANEQUAL reduce using rule 51 (expression -> NUMBER .)
    ISLESSTHANEQUAL reduce using rule 51 (expression -> NUMBER .)
    ISEQUALS        reduce using rule 51 (expression -> NUMBER .)
    ISNOTEQUALS     reduce using rule 51 (expression -> NUMBER .)
    AND             reduce using rule 51 (expression -> NUMBER .)
    OR              reduce using rule 51 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 51 (expression -> NUMBER .)
    RPAREN          reduce using rule 51 (expression -> NUMBER .)
    COMMA           reduce using rule 51 (expression -> NUMBER .)


state 26

    (11) parameter -> type IDENTIFIER .

    RPAREN          reduce using rule 11 (parameter -> type IDENTIFIER .)
    COMMA           reduce using rule 11 (parameter -> type IDENTIFIER .)


state 27

    (7) function -> type IDENTIFIER LPAREN parameter_list RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 47


state 28

    (9) parameter_list -> parameter_list COMMA . parameter
    (11) parameter -> . type IDENTIFIER
    (12) type -> . INT
    (13) type -> . VOID
    (14) type -> . CHAR
    (15) type -> . FLOAT
    (16) type -> . DOUBLE

    INT             shift and go to state 6
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    FLOAT           shift and go to state 9
    DOUBLE          shift and go to state 10

    parameter                      shift and go to state 48
    type                           shift and go to state 16

state 29

    (53) expression -> IDENTIFIER EQUALS . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 49

state 30

    (54) expression -> IDENTIFIER LPAREN . argument_list RPAREN
    (55) argument_list -> . expression
    (56) argument_list -> . argument_list COMMA expression
    (57) argument_list -> . empty
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (58) empty -> .

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20
    RPAREN          reduce using rule 58 (empty -> .)
    COMMA           reduce using rule 58 (empty -> .)

    argument_list                  shift and go to state 50
    expression                     shift and go to state 51
    empty                          shift and go to state 52

state 31

    (35) expression -> expression PLUS . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 53

state 32

    (36) expression -> expression MINUS . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULUS expression
    (40) expression -> . expression ISGREATERTHAN expression
    (41) expression -> . expression ISLESSTHAN expression
    (42) expression -> . expression ISGREATERTHANEQUAL expression
    (43) expression -> . expression ISLESSTHANEQUAL expression
    (44) expression -> . expression ISEQUALS expression
    (45) expression -> . expression ISNOTEQUALS expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . NOT expression
    (49) expression -> . MINUS expression
    (50) expression -> . LPAREN expression RPAREN
    (51) expression -> . NUMBER
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER EQUALS expression
    (54) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    NOT             shift and go to state 23
    MINUS           shift and go to state 22
    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 54

state 33
